sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

02-04-2016 17:06:
/home/gustavo/bourbon/.sublime-gulp-tmp.js:72
    .pipe(gulp.dest('./js'));
                           ^

SyntaxError: missing ) after argument list
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:414:25)
    at Object.Module._extensions..js (module.js:442:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:313:12)
    at Module.require (module.js:366:17)
    at require (module.js:385:17)
    at requireGulp (/home/gustavo/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (/home/gustavo/.config/sublime-text-3/Packages/Gulp/write_tasks_to_cache.js:80:12)
    at Module._compile (module.js:435:26)
